resize issue name to work better on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -62,8 +62,8 @@ article + article {
     margin: auto;
   }
   .logo.header-image {
-    padding-top: 20vh;
-    padding-bottom: 20vh;
+    padding-top: 12vh;
+    padding-bottom: 12vh;
     h1 {
       // background-color: rgba(33, 33, 33, .75);
       padding: 25px 0;
