--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -44,7 +44,11 @@ b {
 }
 
 .issue-name {
-  margin: 5rem auto;
+  margin: 0 auto 5rem;
+  h1 {
+    font-size: 7.5vw;
+    margin-top: 0;
+  }
 }
 
 .post-header {
